syntax = "proto3";

message AlbumMessage {
  int32 album_id = 1;
  string name = 2;
  bytes thumbnail_data = 3;
  string owner_name = 4;
}